--- a/Dependencies/stage_dependency.yml
+++ b/Dependencies/stage_dependency.yml
@@ -31,7 +31,7 @@ stages:
       - job:
         variables:
           job_a_variable: $[ stageDependencies.stage_a.job_a.outputs['setvarStep.myOutputVar'] ]
-          deployment_a_variable: $[ stageDependencies.stage_a.deployment_a.outputs['setvarStep.myOutputVar'] ]
+          deployment_a_variable: $[ stageDependencies.stage_a.deployment_a.deploy.outputs['setvarStep.myOutputVar'] ]
         steps:
           - pwsh: |
               'Write-Host "Job a variable: $(job_a_variable)"'
