--- a/Dependencies/stage_dependency.yml
+++ b/Dependencies/stage_dependency.yml
@@ -6,32 +6,28 @@ stages:
   - stage: stage_a
     jobs:
       - job: job_a
-        pool:
-          vmImage: 'vs2017-win2016'
         steps:
-        - powershell: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]stage_a, job_a value"
+        - pwsh: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]stage_a, job_a value"
           name: setvarStep
-        - script: echo $(setvarStep.myOutputVar)
+        - pwsh: echo $(setvarStep.myOutputVar)
           name: echovar
 
       - deployment: deployment_a
-        pool:
-          vmImage: 'ubuntu-16.04'
         environment: env1
         strategy:                  
           runOnce:
             deploy:
               steps:
-              - bash: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]stage_a, deployment_a value"
+              - pwsh: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]stage_a, deployment_a value"
                 name: setvarStep
-              - bash: echo $(setvarStep.myOutputVar)
+              - pwsh: echo $(setvarStep.myOutputVar)
   - stage: stage_b
     dependsOn: stage_a
     jobs:
       - job:
         variables:
           job_a_variable: $[ stageDependencies.stage_a.job_a.outputs['setvarStep.myOutputVar'] ]
-          deployment_a_variable: $[ stageDependencies.stage_a.deployment_a.deploy.outputs['setvarStep.myOutputVar'] ]
+          deployment_a_variable: $[ stageDependencies.stage_a.deployment_a.outputs['setvarStep.myOutputVar'] ]
         steps:
           - pwsh: |
               'Write-Host "Job a variable: $(job_a_variable)"'
