--- a/Dependencies/stage_dependency.yml
+++ b/Dependencies/stage_dependency.yml
@@ -21,6 +21,22 @@ stages:
               - pwsh: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]stage_a, deployment_a value"
                 name: setvarStep
               - pwsh: echo $(setvarStep.myOutputVar)
+      - job: job_c
+        dependsOn: 
+        - job_a
+        - deployment_a
+        variables:
+          job_a_variable: $[ dependencies.job_a.outputs['setvarStep.myOutputVar'] ]
+          deployment_a_variable: $[ dependencies.deployment_a.outputs['setvarStep.myOutputVar'] ]
+        steps:
+        - pwsh: |
+            'Write-Host "job_a_variable: $(job_a_variable)"
+            'Write-Host "deployment_a_variable: $(deployment_a_variable)"
+        - pwsh: | 
+            echo "##vso[task.setvariable variable=job_a_variable;isOutput=true]$(job_a_variable)"
+            echo "##vso[task.setvariable variable=deployment_a_variable;isOutput=true]$(deployment_a_variable)"   
+          name: setvarStep
+
   - stage: stage_b
     dependsOn: stage_a
     jobs:
@@ -28,6 +44,8 @@ stages:
         variables:
           job_a_variable: $[ stageDependencies.stage_a.job_a.outputs['setvarStep.myOutputVar'] ]
           deployment_a_variable: $[ stageDependencies.stage_a.deployment_a.outputs['setvarStep.myOutputVar'] ]
+          job_c_variable: $[ stageDependencies.stage_a.job_c.outputs['setvarStep.job_a_variable'] ]
+          deployment_c_variable: $[ stageDependencies.stage_c.job_c.outputs['setvarStep.deployment_a_variable'] ]
         steps:
           - pwsh: |
               'Write-Host "Job a variable: $(job_a_variable)"'
