--- a/Dependencies/stage_dependency.yml
+++ b/Dependencies/stage_dependency.yml
@@ -30,8 +30,8 @@ stages:
           deployment_a_variable: $[ dependencies.deployment_a.outputs['setvarStep.myOutputVar'] ]
         steps:
         - pwsh: |
-            'Write-Host "job_a_variable: $(job_a_variable)"
-            'Write-Host "deployment_a_variable: $(deployment_a_variable)"
+            'Write-Host "job_a_variable: $(job_a_variable)"'
+            'Write-Host "deployment_a_variable: $(deployment_a_variable)"'
         - pwsh: | 
             echo "##vso[task.setvariable variable=job_a_variable;isOutput=true]$(job_a_variable)"
             echo "##vso[task.setvariable variable=deployment_a_variable;isOutput=true]$(deployment_a_variable)"   
