--- a/Dependencies/stage_dependency.yml
+++ b/Dependencies/stage_dependency.yml
@@ -21,8 +21,10 @@ stages:
               - pwsh: echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]stage_a, deployment_a value"
                 name: setvarStep
               - pwsh: echo $(setvarStep.myOutputVar)
+                name: echovar
+
       
-      - job: job_c
+      - job: job_b
         dependsOn: 
         - job_a
         - deployment_a
@@ -45,11 +47,11 @@ stages:
         variables:
           job_a_variable: $[ stageDependencies.stage_a.job_a.outputs['setvarStep.myOutputVar'] ]
           deployment_a_variable: $[ stageDependencies.stage_a.deployment_a.outputs['deployment_a.setvarStep.myOutputVar'] ]
-          job_c_variable: $[ stageDependencies.stage_a.job_c.outputs['setvarStep.job_a_variable'] ]
-          deployment_c_variable: $[ stageDependencies.stage_c.job_c.outputs['setvarStep.deployment_a_variable'] ]
+          job_b_variable: $[ stageDependencies.stage_a.job_b.outputs['setvarStep.job_a_variable'] ]
+          deployment_b_variable: $[ stageDependencies.stage_a.job_b.outputs['setvarStep.deployment_a_variable'] ]
         steps:
           - pwsh: |
               'Write-Host "Job a variable: $(job_a_variable)"'
               'Write-Host "Deployment a variable: $(deployment_a_variable)"'
-              'Write-Host "Job c job a variable: $(job_c_variable)"'
-              'Write-Host "Job c Deployment a variable: $(deployment_a_variable)"'
+              'Write-Host "Job b job a variable: $(job_b_variable)"'
+              'Write-Host "Job b Deployment a variable: $(deployment_a_variable)"'
