--- a/Dependencies/stage_dependency.yml
+++ b/Dependencies/stage_dependency.yml
@@ -35,6 +35,8 @@ stages:
         - pwsh: |
             'Write-Host "job_a_variable: $(job_a_variable)"'
             'Write-Host "deployment_a_variable: $(deployment_a_variable)"'
+          name: Show variables
+          
         - pwsh: | 
             echo "##vso[task.setvariable variable=job_a_variable;isOutput=true]$(job_a_variable)"
             echo "##vso[task.setvariable variable=deployment_a_variable;isOutput=true]$(deployment_a_variable)"   
@@ -55,3 +57,5 @@ stages:
               'Write-Host "Deployment a variable: $(deployment_a_variable)"'
               'Write-Host "Job b job a variable: $(job_b_variable)"'
               'Write-Host "Job b Deployment a variable: $(deployment_a_variable)"'
+            name: Show variables
+            
